--- a/dashboard-board/CM4/.cproject
+++ b/dashboard-board/CM4/.cproject
@@ -50,6 +50,9 @@
 									<listOptionValue builtIn="false" value="../../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy"/>
 									<listOptionValue builtIn="false" value="../../Drivers/CMSIS/Device/ST/STM32H7xx/Include"/>
 									<listOptionValue builtIn="false" value="../../Drivers/CMSIS/Include"/>
+									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/Common"/>
+									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/mt48lc4m32b2"/>
+									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/rk043fn48h"/>
 									<listOptionValue builtIn="false" value="../Open_Src"/>
 									<listOptionValue builtIn="false" value="../Open_Src/lvgl"/>
 								</option>
