--- a/dashboard-board/CM4/.cproject
+++ b/dashboard-board/CM4/.cproject
@@ -54,6 +54,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/Common"/>
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/mt48lc4m32b2"/>
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/rk043fn48h"/>
+									<listOptionValue builtIn="false" value="../Gas_Features/Gas_Mdma"/>
 									<listOptionValue builtIn="false" value="../Gas_Features/Gas_Sdram"/>
 									<listOptionValue builtIn="false" value="../Gas_Scheduler"/>
 									<listOptionValue builtIn="false" value="../Open_Src"/>
